test/expected/declare_nmo_eq_rki_rk.out
declare = as non-member operator (reference to S, int)
        ^
9: error: operator "=" can only be a member
